# PMP_RES

./: pyproject.toml  requirements.txt
src/data/: __init__.py  feature_extractor.py  graph_builder.py  md_processor.py  plm_embedder.py  pmp_dataset.py  transforms.py
src/models/dynamo/: __init__.py  classifier.py  conf_attention.py  cross_attention.py  dynamo.py  fusion.py  geometry_path.py  gvp_encoder.py  phys_gate.py
src/models/pmpgen/: __init__.py  conditioning.py  ipa_denoiser.py  mem_guidance.py  noise_schedule.py  pmpgen.py  sampler.py  se3_flow.py  sequence_decoder.py
src/models/shared/: __init__.py  attention.py  gvp_primitives.py  invariant_point.py  se3_utils.py
tests/: test_equivariance.py
