[project]
name = "pmp-research"
python = ">=3.10"

dependencies = [
    "torch>=2.2",
    "torch-geometric>=2.5",
    "gvp-pytorch",           # GVP-GNN primitives
    "fair-esm",              # ESM-2 embeddings
    "biopython>=1.83",       # PDB parsing
    "mdanalysis>=2.7",       # MD trajectory processing
    "freesasa",              # SASA computation
    "hydra-core>=1.3",       # config management
    "wandb",                 # experiment tracking
    "roma",                  # SO(3) / SE(3) utilities
    "einops",                # tensor reshaping
    "pytest",
]
